【update】http相关笔记更新

--- a/http/数据协商.md
+++ b/http/数据协商.md
@@ -1,17 +1,75 @@
-## 请求
+## 数据协商
 
-Accept
-
-指定想要的数据类型
-
-Accept-Encoding
-
-指定传出的编码类型
+客户端发送请求给服务端，客户端会声明请求希望拿到的数据格式和限制，服务端会根据请求头信息，来决定返回的数据
 
 
 
+## 客户端请求
+
+Accept - 指定想要的数据类型
+
+Accept-Encoding - 指定数据传输的编码类型，限制服务端进行数据压缩的方式
+
+Accept-Language - 展示语言（中文/英文等）
+
+User-Agent - 浏览器相关信息（移动端、客户端、pc端的浏览器的User-Agent不同）
 
 
 
+## 服务器端返回
 
-## 返回
+Content-Type - 对应Accept，从Accept中选择数据类型返回
+
+Content-Encoding - 对应Accept-Encoding,声明服务器端数据压缩的方式
+
+Content-Language - 对应Accept-Language，根据请求，声明返回语言
+
+
+
+## 案例
+
+```js
+//server.js
+
+const http = require('http');
+const fs = require('fs');
+const zlib = require('zlib');
+
+http.createServer((req, res) => {
+    let content = fs.readFileSync('./test.html');
+    res.writeHead("200", {
+        "Content-Type": "text/html",
+        //"X-Content-Type-Options": "nosniff" //提示标志，服务器用来提示客户端一定要遵循Content-Type中的设定
+        "Content-Encoding": "gzip"
+    });
+    res.end(zlib.gzipSync(content));
+
+}).listen(8888);
+```
+
+```html
+//test.html
+
+<!DOCTYPE html>
+<head>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <title>标题</title>
+</head>
+<body>
+<div>
+    <form action="/form" method="post" enctype="application/x-www-form-urlencoded">
+        <input type="text" name="name">
+        <input type="password" name="pass">
+        <input type="submit">
+    </form>
+</div>
+<script>
+   
+</script>
+/body>
+</html>
+
+```
+
+![image-20191119111533531](C:\Users\xnn\AppData\Roaming\Typora\typora-user-images\image-20191119111533531.png)
+
